Fix issue with extra space on desktop

--- a/covid-19-support/src/scss/main.scss
+++ b/covid-19-support/src/scss/main.scss
@@ -87,6 +87,7 @@ h6,
   border-top: 1px solid #ddd;
 
   @include media-breakpoint-up(md) {
+    padding-bottom: 0;
     margin-top: 0;
     height: 100%;
   }
